<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarProductos">

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Menu"
        android:text="@string/menu"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttons"
        />

    <TextView
        android:id="@+id/pruebas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:layout_toRightOf="@id/button8"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="13dp"
        />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:layout_below="@id/button8"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/codigo"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
        />

    <EditText
        android:id="@+id/editnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNombre"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
        />

    <EditText
        android:id="@+id/editdescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editnombre"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/descripción"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
       />

    <EditText
        android:id="@+id/editprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editdescripcion"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:hint="@string/precio"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp"
       />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Registrar"
        android:text="@string/registrar"
        android:layout_below="@id/switch3"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/buttons"
        />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:onClick="onclick"
        android:text="@string/plato"
        android:textSize="18sp"
        android:layout_below="@id/editprecio"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="61dp"
        android:layout_height="24dp"
        android:text="@string/bebida"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="Bebida"
        android:layout_below="@id/editprecio"
        android:layout_toRightOf="@id/switch3"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="27dp"
        />


</RelativeLayout>